--- a/VitalzApp/app/src/main/res/layout/activity_add_device.xml
+++ b/VitalzApp/app/src/main/res/layout/activity_add_device.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +9,7 @@
 
     <ImageView
         android:id="@+id/imageView_vitalz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:contentDescription="@string/vitalz_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,8 +21,7 @@
 
     <ImageView
         android:id="@+id/imageView_add_device"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:contentDescription="@string/vitalz_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,8 +33,7 @@
 
     <TextView
         android:id="@+id/tx_start_device"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:layout_marginTop="@dimen/dp_32"
         android:gravity="center"
         android:text="@string/start_using_the_device"
