--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     android:layout_marginTop="20dp"
     <item name="android:layout_width">@dimen/dp_50</item>
     <item name="android:layout_height">@dimen/dp_50</item>
-    <item name ="android:layout_marginTop">20dp</item>
+    <item name ="android:layout_marginTop">@dimen/dp_16</item>
     <item name="android:inputType">number</item>
     <item name="android:padding">@dimen/dp_8</item>
     <item name="android:maxLength">1</item>
@@ -29,7 +29,6 @@
     <item name="android:textColor">@color/black</item>
   </style>
 
-
   <style name="button">
     <item name="android:layout_width">@dimen/dp_240</item>
     <item name="android:layout_height">wrap_content</item>
@@ -38,6 +37,7 @@
     <item name="android:backgroundTint">@color/button_blue</item>
     <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
   </style>
+
 
     <style name="viewSize" >
         <item name="android:layout_width">wrap_content</item>
