--- a/VitalzApp/app/src/main/res/layout/sample_register_user.xml
+++ b/VitalzApp/app/src/main/res/layout/sample_register_user.xml
@@ -184,7 +184,13 @@
 
             <EditText
                 android:id="@+id/et_address"
-                style="@style/et_address"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_100"
+                android:layout_marginTop="@dimen/dp_5"
+                android:background="@drawable/edit_text_box"
+                android:gravity="start"
+                android:inputType="text"
+                android:padding="@dimen/dp_8"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="parent"
@@ -256,7 +262,7 @@
                 style="@style/button"
                 android:text="@string/submit"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_attending_doctor"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
