--- a/VitalzApp/app/src/main/res/layout/sample_screen.xml
+++ b/VitalzApp/app/src/main/res/layout/sample_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,23 +18,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2"
         app:srcCompat="@drawable/vitalz_icon" />
-    
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_login"
-        style="@style/layout_login"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_16"
+        android:background="@color/white"
+        android:padding="@dimen/dp_16"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz">
 
         <TextView
             android:id="@+id/tv_user_name"
             style="@style/heading_dashboard"
-            android:text="@string/username"
-            android:gravity="start"
             android:drawablePadding="@dimen/dp_16"
+            android:gravity="start"
+            android:text="@string/username"
+            app:drawableStartCompat="@drawable/ic_username"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:drawableStartCompat="@drawable/ic_username" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_user_name"
@@ -47,29 +51,29 @@
         <TextView
             android:id="@+id/tv_password"
             style="@style/heading_dashboard"
-            android:text="@string/password"
-            android:gravity="start"
             android:drawablePadding="@dimen/dp_16"
+            android:gravity="start"
+            android:text="@string/password"
+            app:drawableStartCompat="@drawable/ic_password"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_user_name"
-            app:drawableStartCompat="@drawable/ic_password" />
+            app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
 
         <EditText
             android:id="@+id/et_password"
             style="@style/et_dashboard"
             android:layout_width="@dimen/dp_300"
-            android:text=""
             android:inputType="text"
+            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_password" />
 
         <TextView
             android:id="@+id/tv_forgot_password"
             style="@style/heading_dashboard"
-            android:text="@string/forgot_password"
-            android:gravity="start"
-            android:textColor="@color/button_blue"
             android:drawablePadding="@dimen/dp_16"
+            android:gravity="start"
+            android:text="@string/forgot_password"
+            android:textColor="@color/button_blue"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
@@ -79,7 +83,7 @@
             android:text="@string/login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
