--- a/VitalzApp/app/src/main/res/layout/sample_screen.xml
+++ b/VitalzApp/app/src/main/res/layout/sample_screen.xml
@@ -21,8 +21,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:layout_marginTop="@dimen/dp_16"
         android:background="@color/white"
         android:padding="@dimen/dp_16"
