--- a/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/vitalz"
-    tools:context=".device.DeviceActivity">
+    android:background="@mipmap/vitalz">
 
     <ImageView
         android:id="@+id/imageView_vitalz"
@@ -16,11 +16,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.3"
         app:srcCompat="@drawable/vitalz_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/customLayoutDevice"
+        style="@style/viewSize"
+        android:paddingStart="@dimen/dp_40"
+        android:paddingEnd="@dimen/dp_40"
+        android:paddingTop="@dimen/dp_32"
+        android:paddingBottom="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_32"
         android:background="@drawable/display_text_box"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +35,6 @@
             android:id="@+id/imageView_battery"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
-            android:layout_marginStart="@dimen/dp_50"
             android:contentDescription="@string/vitalz_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
