--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -136,17 +136,10 @@
         <item name="android:layout_margin">@dimen/dp_32</item>
     </style>
 
-    <style name="customLayoutDevice">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/dp_150</item>
-        <item name="android:layout_margin">@dimen/dp_32</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
-    </style>
-
     <style name="textViewDevice">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
         <item name="android:layout_marginStart">@dimen/dp_16</item>
     </style>
 
