--- a/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@mipmap/vitalz">
 
     <ImageView
@@ -20,14 +21,13 @@
         app:srcCompat="@drawable/vitalz_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:paddingStart="@dimen/dp_40"
-        android:paddingEnd="@dimen/dp_40"
-        android:paddingTop="@dimen/dp_32"
-        android:paddingBottom="@dimen/dp_32"
+        style="@style/viewSize"
         android:layout_margin="@dimen/dp_32"
         android:background="@drawable/display_text_box"
+        android:paddingStart="@dimen/dp_40"
+        android:paddingTop="@dimen/dp_32"
+        android:paddingEnd="@dimen/dp_40"
+        android:paddingBottom="@dimen/dp_32"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz">
