--- a/VitalzApp/app/src/main/res/layout/fragment_user_selection.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_user_selection.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/vitalz"
-    tools:context=".user_selection.UserSelectionActivity">
+    android:background="@mipmap/vitalz">
 
     <ImageView
         android:id="@+id/imageView_vitalz"
@@ -17,16 +15,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.3"
         app:srcCompat="@drawable/vitalz_icon" />
 
     <TextView
         android:id="@+id/tv_select_user"
         style="@style/viewSize"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/dp_32"
         android:text="@string/please_select_user"
         android:textColor="@color/button_blue"
-        android:textSize="20sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,14 +35,14 @@
         style="@style/viewContainer"
         android:background="@drawable/bg_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_select_user" />
 
     <ImageView
         android:id="@+id/iv_hs_operative"
         style="@style/viewSize"
-        android:elevation="5dp"
+        android:elevation="@dimen/dp_5"
         android:src="@drawable/ic_hs_operative"
         app:layout_constraintBottom_toBottomOf="@id/hospital_layout"
         app:layout_constraintEnd_toEndOf="@id/hospital_layout"
@@ -74,14 +72,14 @@
         style="@style/viewContainer"
         android:background="@drawable/bg_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hospital_layout" />
 
     <ImageView
         android:id="@+id/iv_patient"
         style="@style/viewSize"
-        android:elevation="5dp"
+        android:elevation="@dimen/dp_5"
         android:src="@drawable/ic_patient"
         app:layout_constraintBottom_toBottomOf="@id/patient_care_layout"
         app:layout_constraintEnd_toEndOf="@+id/patient_care_layout"
