--- a/VitalzApp/app/src/main/res/layout/fragment_view_profile.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_view_profile.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@mipmap/vitalz"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/vitalz">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/app_bar_layout"
@@ -74,13 +73,14 @@
             style="@style/layout_dashboard"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_connectivity_icon">
 
             <ImageView
                 android:id="@+id/iv_add_user"
                 style="@style/viewSize"
                 android:contentDescription="@string/remote_icon"
-                android:src="@drawable/ic_add_user"
+                android:src="@drawable/ic_baseline_person_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -88,7 +88,7 @@
                 android:id="@+id/tv_user_registration"
                 style="@style/viewSize"
                 android:layout_marginStart="@dimen/dp_16"
-                android:text="@string/user_registration"
+                android:text="Profile"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/button_blue"
                 app:layout_constraintStart_toEndOf="@+id/iv_add_user"
@@ -101,7 +101,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_user_registration" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_name"
                 style="@style/et_dashboard"
                 android:text=""
@@ -115,9 +115,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_age"
-                style="@style/heading_dashboard_spinner"
+                style="@style/dashboard_fields"
                 android:layout_width="@dimen/dp_150"
                 android:text=""
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,9 +132,9 @@
                 app:layout_constraintStart_toEndOf="@+id/et_age"
                 app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_gender"
-                style="@style/heading_dashboard_spinner"
+                style="@style/dashboard_fields"
                 android:layout_width="@dimen/dp_150"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,9 +148,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_age" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_height"
-                style="@style/heading_dashboard_spinner"
+                style="@style/dashboard_fields"
                 android:layout_width="@dimen/dp_150"
                 android:text=""
                 app:layout_constraintStart_toStartOf="parent"
@@ -165,9 +165,9 @@
                 app:layout_constraintStart_toEndOf="@+id/et_age"
                 app:layout_constraintTop_toBottomOf="@+id/et_gender" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_weight"
-                style="@style/heading_dashboard_spinner"
+                style="@style/dashboard_fields"
                 android:layout_width="@dimen/dp_150"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +183,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_weight" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_address"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_100"
@@ -206,7 +206,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_address" />
 
-            <EditText
+            <TextView
                 android:id="@+id/tv_contact_number"
                 style="@style/et_dashboard"
                 android:inputType="number"
@@ -222,7 +222,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_contact_number" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_emergency_contact_name"
                 style="@style/et_dashboard"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -236,7 +236,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_emergency_contact_name" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_emergency_contact_number"
                 style="@style/et_dashboard"
                 android:inputType="number"
@@ -251,7 +251,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_emergency_contact_number" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_attending_doctor"
                 style="@style/et_dashboard"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -265,21 +265,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_attending_doctor" />
 
-            <EditText
+            <TextView
                 android:id="@+id/et_id_hospital"
                 style="@style/et_dashboard"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_id_hospital" />
-
-            <Button
-                android:layout_width="match_parent"
-                style="@style/button"
-                android:text="@string/submit"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_id_hospital" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
