--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -72,6 +72,17 @@
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
     </style>
 
+    <style name="dashboard_fields">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/dp_5</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">start</item>
+        <item name="android:padding">@dimen/dp_8</item>
+        <item name="android:inputType">number</item>
+        <item name="android:background">@drawable/edit_text_box</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+    </style>
+
     <style name="dashboard_ble">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/dp_32</item>
